# SS2GDrive

./: .gitignore  README.md  build.sh  run.sh
app/: pyproject.toml
app/ss2gd/: cli.py  clipboard.py  config.py  drive_uploader.py  notify.py  record_region.py  recorder.py  region_select.py  screencast_portal.py  screenshot_portal.py
app/ss2gd/ui/: overlay_rect.py  record.py  settings.py  tray.py
assets/: com.ss2gd.SS2GDrive-record.desktop  com.ss2gd.SS2GDrive-shot.desktop  com.ss2gd.SS2GDrive.desktop
flatpak/: com.ss2gd.SS2GDrive.json
